[tool.poetry]
name = "cipher_kh3117"
version = "0.1.0"
description = "A package that ciphers text into a coded message"
authors = ["Kellyann Hayes"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
